--- a/src/app/student-table/student-table.component.css
+++ b/src/app/student-table/student-table.component.css
@@ -19,27 +19,31 @@
 
 table {
   display: block;
-  overflow-x: auto;
-  white-space: nowrap;
+  white-space: normal;
+  overflow-x: scroll;
 }
 
 .rucica {
   cursor: pointer;
 }
 
-.student-cell { 
-  min-width: 110px;
-  max-width: 200px;
+th { 
+  min-width: 200px;
+}
+
+td {
+  min-width: 150;
+}
+
+.btn-td, .btn-th { 
+  min-width: 80px;
+  max-width: 80px;
+  text-align: center;
 }
 
 .edit-cell { 
   min-width: 200px;
   max-width: 200px;
-}
-
-.first-cell { 
-  min-width: 70px;
-  max-width: 70px;
 }
 
 button.calendar, button.calendar:active {
