--- a/src/app/archive/archive.component.html
+++ b/src/app/archive/archive.component.html
@@ -3,14 +3,14 @@
     <thead>
     <tr>
       <th class="btn-th"></th>
-      <th scope="col" sortable="ime" (sort)="onSort($event)">Ime</th>
-      <th scope="col" sortable="prz" (sort)="onSort($event)">Prezime</th>
+      <th scope="col">Ime</th>
+      <th scope="col">Prezime</th>
       <th scope="col">Članarina</th>
       <th scope="col">Datum učlanjena</th>
-      <th scope="col" sortable="fakultet" (sort)="onSort($event)">Fakultet</th>
-      <th scope="col" sortable="smer" (sort)="onSort($event)">Smer</th>
-      <th scope="col" sortable="godUpis" (sort)="onSort($event)">Godina upisa</th>
-      <th scope="col" sortable="godStud" (sort)="onSort($event)">Godina studija</th>
+      <th scope="col">Fakultet</th>
+      <th scope="col">Smer</th>
+      <th scope="col">Godina upisa</th>
+      <th scope="col">Godina studija</th>
       <th scope="col">Mesto stanovanja</th>
       <th scope="col">Mesto rođenja</th>
       <th scope="col">Datum rođenja</th>
