--- a/src/app/tabs/tabs.component.html
+++ b/src/app/tabs/tabs.component.html
@@ -30,7 +30,7 @@
       </ng-template>
     </ngb-tab>
   
-    <ngb-tab title="Novi član" [attr.id]="nc">
+    <ngb-tab title="Novi član">
       <ng-template ngbTabContent>
         <app-form></app-form>
       </ng-template>
