--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+input[type=checkbox] {
+    transform: scale(1.7);
+    margin-top: 7px;
+  }
+  input[type=radio] {
+    transform: scale(1.6);
+  }
+  .rucica {
+    cursor: pointer;
+  }
+  
+label {
+  font-weight: 500;
+}
